# upload_server

./: LICENSE  README.md  docker-compose.yml  images.html  pyproject.toml  server.py  test.py  upload.html  user_image.html
css/: images.css  upload.css  user_image.css
js/: storage.js  upload.js
services/backend/: Dockerfile
services/backend/src/: config.py  exceptions.py  logging_config.py  pyproject.toml  server.py
services/backend/src/settings/: config.py
services/frontend/: image_data.html  images.html  index.html  upload.html
services/frontend/css/: user_image.css
services/frontend/js/: random-hero.js  storage.js
services/frontend/static/js/: image_data.js  random-hero.js  storage.js
services/nginx/: nginx.conf
