[project]
name = "upload-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleksandr Mileshkin",email = "mileshkin89@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
